# BachelorThesis

./: README.md  pseudo_code.txt  todo.rtf
PokerSimulator/OwnPokerSimulator/: CMakeLists.txt  consolOutput.txt  main.cpp  random.cpp  rules.cpp  rules.h  statistics.cpp  statistics.h  util.cpp  util.h
PokerSimulator/OwnPokerSimulator/Backups/3rdGen/: describtion.rtf
PokerSimulator/OwnPokerSimulator/Backups/4thGen/: describtion.rtf
PokerSimulator/OwnPokerSimulator/Backups/BettingStrategy/: describtion.rtf
PokerSimulator/OwnPokerSimulator/Backups/FirstGen/: describtion.rtf
PokerSimulator/OwnPokerSimulator/Backups/HOF_100P_200G/: description.rtf
PokerSimulator/OwnPokerSimulator/Backups/HOF_100P_onlyOwnAI/: description.rtf
PokerSimulator/OwnPokerSimulator/Backups/HallOfFame_1/: describtion.rtf
PokerSimulator/OwnPokerSimulator/Backups/SecondGen/: describtion.rtf
PokerSimulator/OwnPokerSimulator/ConsolOutput/: consolOutputGame.txt
PokerSimulator/OwnPokerSimulator/Results/: results.csv
PokerSimulator/OwnPokerSimulator/ai/: ai.cpp  ai.h  aiCaller.cpp  aiCaller.h  aiFolder.cpp  aiFolder.h  aiOwn.cpp  aiOwn.h  aiRaiser.cpp  aiRaiser.h  aiRandom.cpp  aiRandom.h  aiSmart.cpp  aiSmart.h
PokerSimulator/OwnPokerSimulator/ai/NN_agent/: NeuralNet.cpp  NeuralNet.h  Neuron.cpp  Neuron.h
PokerSimulator/OwnPokerSimulator/game_assets/: action.cpp  action.h  card.cpp  card.h  cardDealer.cpp  cardDealer.h  deck.cpp  deck.h  game.cpp  game.h  information.cpp  information.h  player.cpp  player.h  table.cpp  table.h
PokerSimulator/OwnPokerSimulator/hand_eval/: combination.cpp  combination.h  handEvalCalc.cpp  handEvalCalc.h  pokereval.cpp  pokereval.h  pokermath.cpp  pokermath.h
PokerSimulator/OwnPokerSimulator/hand_eval/2+2/: 2P2Evaluator.cpp  2P2Evaluator.h
PokerSimulator/OwnPokerSimulator/test_cases/: createPreflopTableFile.cpp  handEvaluatorTest.cpp  normal_distribution_test.cpp  simulatorTestCases.cpp  testAgentsAgainstAgents.cpp  testAiVsAi.cpp  testDifferentAIsForCorrectness.cpp  testGettingWinChancePreflop.cpp  testMultiThreading.cpp  testNNAgent.cpp  testSingleTableAllAgents.cpp
(+96 files in other folders)
